Address code review feedback: refactor validation, use Gson, improve security
Co-authored-by: aryabisma <3757434+aryabisma@users.noreply.github.com>